# onceproof

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  external-smoke.yml
docs/: OPERATIONS.md  PROTOCOL.md  RELEASE.md  THREAT_MODEL.md
scripts/: container-entrypoint.sh  external_smoke.py  release_smoke.py
src/onceproof/: __init__.py  __main__.py  cli.py  config.py  crypto.py  errors.py  http.py  keyring.py  locking.py  model.py  openapi.json  service.py  store.py
tests/: __init__.py  test_cli.py  test_config.py  test_contract.py  test_crypto.py  test_http.py  test_keyring.py  test_locking.py  test_model.py  test_service.py
